project3/kubernetes/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: api:latest
          imagePullPolicy: Never
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m                      
          ports:
            - containerPort: 7777
