project3/kubernetes/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: ui:latest
          imagePullPolicy: Never
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m  
          ports:
            - containerPort: 7778
