project3/kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: LoadBalancer
  ports:
  - port: 7777
    targetPort: 7777
    protocol: TCP
  selector:
    app: api
