project3/kubernetes/consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer-service
spec:
  type: LoadBalancer
  ports:
  - port: 7779
    targetPort: 7779
    protocol: TCP
  selector:
    app: consumer
